--- a/css/a-z-listing-default.scss
+++ b/css/a-z-listing-default.scss
@@ -1,20 +1,30 @@
 @import "mixins.scss";
 
-.a-z-listing-widget.default-style {
-    .letter {
-        .az-letters {
-            @include clearfix();
-            ul.az-links {
-                li {
-                    float: left;
-                    width: 2em;
-                    height: 2em;
-                    box-sizing: border-box;
-                    margin: 0.15em;
-                    border: 1px solid #8bf;
-                    background: #adf;
-                    color: black;
-                }
+.az-letters {
+    @include clearfix();
+    display: flex;
+    justify-content: center;
+    ul.az-links {
+        padding: 0;
+        margin: 0;
+        li {
+            list-style: none;
+            float: left;
+            width: 2em;
+            height: 2em;
+            box-sizing: border-box;
+            margin: 0.15em;
+            border: 1px solid #8bf;
+            background: #adf;
+            color: black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            a {
+                color: black;
+                font-weight: bold;
+                font-size: 1.6em;
+                text-decoration: none;
             }
         }
     }
