--- a/css/a-z-listing-default.scss
+++ b/css/a-z-listing-default.scss
@@ -14,18 +14,31 @@
             height: 2em;
             box-sizing: border-box;
             margin: 0.15em;
-            border: 1px solid #8bf;
-            background: #adf;
-            color: black;
+            border: 2px solid #e5e5e5;
+            background: #f5f5f5;
+            color: #adadad;
             display: flex;
             align-items: center;
             justify-content: center;
             a {
-                color: black;
-                font-weight: bold;
-                font-size: 1.6em;
+                color: #1f7d9a;
                 text-decoration: none;
+                border: 0;
+                box-shadow: none;
             }
         }
+    }
+}
+
+.letter-section {
+    margin-bottom: 2em;
+    h2 {
+        border-bottom: 1px solid black;
+        margin-bottom: 0.2em;
+        padding-bottom: 0.2em;
+    }
+    ul, ul li {
+        list-style: none;
+        margin: 0;
     }
 }
