--- a/css/a-z-listing-default.scss
+++ b/css/a-z-listing-default.scss
@@ -76,10 +76,11 @@
 	div.columns {
 		width: 100%;
 		column-count: 1;
-		column-gap: 0.6em;
+		column-gap: 0.6rem;
 		@supports (display: grid) {
 			display: grid;
-			grid-gap: 0 0.6em;
+			grid-gap: 0 0.6rem;
+			grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
 			&:after {
 				display: none;
 			}
