--- a/css/a-z-listing-default.css
+++ b/css/a-z-listing-default.css
@@ -1,77 +1,37 @@
-.az-letters,
-.a-z-listing-widget .az-letters,
-.a-z-listing-widget.widget .az-letters {
+.az-letters ul.az-links,
+.a-z-listing-widget .az-letters ul.az-links,
+.a-z-listing-widget.widget .az-letters ul.az-links {
+  padding: 0;
+  margin: 0;
+  width: 100%;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center; }
-  .az-letters:after,
-  .a-z-listing-widget .az-letters:after,
-  .a-z-listing-widget.widget .az-letters:after {
-    content: "";
-    display: table;
-    clear: both; }
-  @supports (display: grid) {
-    .az-letters,
-    .a-z-listing-widget .az-letters,
-    .a-z-listing-widget.widget .az-letters {
-      display: block; }
-      .az-letters:after,
-      .a-z-listing-widget .az-letters:after,
-      .a-z-listing-widget.widget .az-letters:after {
-        display: none; } }
-  .az-letters ul.az-links,
-  .a-z-listing-widget .az-letters ul.az-links,
-  .a-z-listing-widget.widget .az-letters ul.az-links {
-    padding: 0;
-    margin: 0;
-    width: 100%;
+  .az-letters ul.az-links li,
+  .a-z-listing-widget .az-letters ul.az-links li,
+  .a-z-listing-widget.widget .az-letters ul.az-links li {
+    list-style: none;
+    width: 2em;
+    height: 2em;
+    box-sizing: border-box;
+    margin: 0.15em;
+    border: 2px solid #e5e5e5;
+    background: #f5f5f5;
+    color: #adadad;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap; }
-    @supports (display: grid) {
-      .az-letters ul.az-links,
-      .a-z-listing-widget .az-letters ul.az-links,
-      .a-z-listing-widget.widget .az-letters ul.az-links {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(2em, 1fr));
-        grid-gap: 0.3em; } }
-    .az-letters ul.az-links li,
-    .a-z-listing-widget .az-letters ul.az-links li,
-    .a-z-listing-widget.widget .az-letters ul.az-links li {
-      list-style: none;
-      float: left;
-      width: 2em;
-      height: 2em;
-      box-sizing: border-box;
-      margin: 0.15em;
-      border: 2px solid #e5e5e5;
-      background: #f5f5f5;
-      color: #adadad;
-      display: flex;
-      align-items: center;
-      justify-content: center; }
-      @supports (display: grid) {
-        .az-letters ul.az-links li,
-        .a-z-listing-widget .az-letters ul.az-links li,
-        .a-z-listing-widget.widget .az-letters ul.az-links li {
-          display: grid;
-          width: 100%;
-          height: auto;
-          margin: 0;
-          padding: 0; } }
-      .az-letters ul.az-links li a,
-      .a-z-listing-widget .az-letters ul.az-links li a,
-      .a-z-listing-widget.widget .az-letters ul.az-links li a {
-        color: #1f7d9a;
-        text-decoration: none;
-        border: 0;
-        box-shadow: none; }
+    align-items: center;
+    justify-content: center; }
+    .az-letters ul.az-links li a,
+    .a-z-listing-widget .az-letters ul.az-links li a,
+    .a-z-listing-widget.widget .az-letters ul.az-links li a {
+      color: #1f7d9a;
+      text-decoration: none;
+      border: 0;
+      box-shadow: none; }
 
 .letter-section {
   margin-bottom: 2em; }
-  .letter-section:after {
-    content: "";
-    display: table;
-    clear: both; }
   .letter-section h2.letter-title {
     border-bottom: 1px solid black;
     margin-bottom: 0.2em;
@@ -80,21 +40,54 @@
   .letter-section ul, .letter-section ul li {
     list-style: none;
     margin: 0; }
-  .letter-section div.column {
-    box-sizing: border-box; }
-    .letter-section div.column:nth-last-child(1) {
-      flex-grow: 1; }
-  .letter-section div.columns {
+  .letter-section ul.columns {
     width: 100%;
-    column-count: 1;
-    column-gap: 0.6rem; }
-    @supports (display: grid) {
-      .letter-section div.columns {
-        display: grid;
-        grid-gap: 0 0.6rem;
-        grid-template-columns: repeat(auto-fill, minmax(10em, 1fr)); }
-        .letter-section div.columns:after {
-          display: none; } }
+    box-sizing: border-box;
+    column-gap: 0.6em;
+    column-width: 10em;
+    line-height: 1.6em; }
+    .letter-section ul.columns.max-2-columns {
+      column-count: 2;
+      max-width: 20.6em; }
+    .letter-section ul.columns.max-3-columns {
+      column-count: 3;
+      max-width: 31.2em; }
+    .letter-section ul.columns.max-4-columns {
+      column-count: 4;
+      max-width: 41.8em; }
+    .letter-section ul.columns.max-5-columns {
+      column-count: 5;
+      max-width: 52.4em; }
+    .letter-section ul.columns.max-6-columns {
+      column-count: 6;
+      max-width: 63em; }
+    .letter-section ul.columns.max-7-columns {
+      column-count: 7;
+      max-width: 73.6em; }
+    .letter-section ul.columns.max-8-columns {
+      column-count: 8;
+      max-width: 84.2em; }
+    .letter-section ul.columns.max-9-columns {
+      column-count: 9;
+      max-width: 94.8em; }
+    .letter-section ul.columns.max-10-columns {
+      column-count: 10;
+      max-width: 105.4em; }
+    .letter-section ul.columns.max-11-columns {
+      column-count: 11;
+      max-width: 116em; }
+    .letter-section ul.columns.max-12-columns {
+      column-count: 12;
+      max-width: 126.6em; }
+    .letter-section ul.columns.max-13-columns {
+      column-count: 13;
+      max-width: 137.2em; }
+    .letter-section ul.columns.max-14-columns {
+      column-count: 14;
+      max-width: 147.8em; }
+    .letter-section ul.columns.max-15-columns {
+      column-count: 15;
+      max-width: 158.4em; }
   .letter-section div.back-to-top {
     width: 100%;
     text-align: right; }
