--- a/css/a-z-listing-default.css
+++ b/css/a-z-listing-default.css
@@ -48,7 +48,7 @@
     column-width: 10em;
     line-height: 1.6em; }
     .letter-section ul.columns li {
-      display: inline-block; }
+      display: block; }
     .letter-section ul.columns.max-0-columns, .letter-section ul.columns.max-1-columns {
       column-count: 1;
       max-width: 10.6em; }
