--- a/css/a-z-listing-default.scss
+++ b/css/a-z-listing-default.scss
@@ -53,7 +53,7 @@
 		column-width: 10em;
 		line-height: 1.6em;
 		li {
-			display: inline-block;
+			display: block;
 		}
 		&.max-0-columns,
 		&.max-1-columns {
