--- a/css/a-z-listing-default.scss
+++ b/css/a-z-listing-default.scss
@@ -16,7 +16,7 @@
 			width: 2em;
 			height: 2em;
 			box-sizing: border-box;
-			margin: 0.15em;
+			margin: 0 0 0.6em;
 			border: 2px solid #e5e5e5;
 			background: #f5f5f5;
 			color: #adadad;
@@ -50,7 +50,7 @@
 		width: 100%;
 		box-sizing: border-box;
 		column-gap: 0.6em;
-		column-width: 10em;
+		column-width: 15em;
 		line-height: 1.6em;
 		li {
 			display: block;
@@ -58,12 +58,12 @@
 		&.max-0-columns,
 		&.max-1-columns {
 			column-count: 1;
-			max-width: 10.6em;
+			max-width: 15.6em;
 		}
 		@for $column from 2 to 16 {
 			&.max-#{$column}-columns {
 				column-count: $column;
-				max-width: ($column * 10em) + (($column - 1) * 0.6em);
+				max-width: ($column * 15em) + (($column - 1) * 0.6em);
 			}
 		}
 	}
