--- a/css/a-z-listing-default.css
+++ b/css/a-z-listing-default.css
@@ -1,43 +1,49 @@
-.az-letters ul.az-links,
-.a-z-listing-widget .az-letters ul.az-links,
-.a-z-listing-widget.widget .az-letters ul.az-links {
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center; }
-  .az-letters ul.az-links li,
-  .a-z-listing-widget .az-letters ul.az-links li,
-  .a-z-listing-widget.widget .az-letters ul.az-links li {
-    list-style: none;
-    width: 2em;
-    height: 2em;
-    box-sizing: border-box;
-    margin: 0 0 0.6em;
-    border: 2px solid #e5e5e5;
-    background: #f5f5f5;
-    color: #adadad;
+.az-letters,
+.a-z-listing-widget .az-letters,
+.a-z-listing-widget.widget .az-letters {
+  white-space: unset; }
+  .az-letters > ul.az-links,
+  .a-z-listing-widget .az-letters > ul.az-links,
+  .a-z-listing-widget.widget .az-letters > ul.az-links {
+    padding: 0;
+    margin: 0;
+    width: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center; }
-    .az-letters ul.az-links li a,
-    .a-z-listing-widget .az-letters ul.az-links li a,
-    .a-z-listing-widget.widget .az-letters ul.az-links li a {
-      color: #1f7d9a;
-      text-decoration: none;
-      border: 0;
-      box-shadow: none; }
+    .az-letters > ul.az-links > li,
+    .a-z-listing-widget .az-letters > ul.az-links > li,
+    .a-z-listing-widget.widget .az-letters > ul.az-links > li {
+      list-style: none;
+      width: 2em;
+      height: 2em;
+      box-sizing: border-box;
+      margin: 0 0 0.6em;
+      border: 2px solid #e5e5e5;
+      background: #f5f5f5;
+      color: #adadad;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      .az-letters > ul.az-links > li a,
+      .a-z-listing-widget .az-letters > ul.az-links > li a,
+      .a-z-listing-widget.widget .az-letters > ul.az-links > li a {
+        color: #1f7d9a;
+        text-decoration: none;
+        border: 0;
+        box-shadow: none; }
 
 .letter-section {
-  margin-bottom: 2em; }
+  margin-bottom: 2em;
+  white-space: unset; }
   .letter-section h2.letter-title {
     border-bottom: 1px solid black;
     margin-bottom: 0.2em;
     padding-bottom: 0.2em;
     width: 100%; }
-  .letter-section ul, .letter-section ul li {
+  .letter-section ul,
+  .letter-section ul > li {
     list-style: none;
     margin: 0;
     padding: 0; }
@@ -47,7 +53,7 @@
     column-gap: 0.6em;
     column-width: 15em;
     line-height: 1.6em; }
-    .letter-section ul.columns li {
+    .letter-section ul.columns > li {
       display: block; }
     .letter-section ul.columns.max-0-columns, .letter-section ul.columns.max-1-columns {
       column-count: 1;
