--- a/css/a-z-listing-default.scss
+++ b/css/a-z-listing-default.scss
@@ -80,9 +80,7 @@ div.letter-section {
 					($column * $defaultColumnWidth)
 					+ (($column - 1) * $defaultColumnGap);
 				// Browsers that support calc() and var()
-				max-width: calc(
-					(#{$column} * var(--a-z-listing-column-width, #{$defaultColumnWidth}))
-					+ ((#{$column} - 1) * var(--a-z-listing-column-gap, #{$defaultColumnGap})));
+				max-width: unquote('calc((min(var(--a-z-listing-column-count, #{$defaultColumnCount}), #{$column}) * var(--a-z-listing-column-width, #{$defaultColumnWidth})) + ((min(var(--a-z-listing-column-count, #{$defaultColumnCount}), #{$column}) - 1) * var(--a-z-listing-column-gap, #{$defaultColumnGap})))');
 			}
 		}
 	}
